--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ vocgo = "vocgo.main:app"
 [tool.poetry.dependencies]
 python = "^3.6"
 typer = "^0.3.2"
+opencv-python = "^4.5.2"
+numpy = "1.19.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
